package PAI.dto.degreeType;

public record DegreeTypeDTO(
        String id,
        String name,
        int maxEcts
) {
}
